--- a/drum-kit-js/styles.css
+++ b/drum-kit-js/styles.css
@@ -11,26 +11,24 @@ body {
     background-image: url('./images/piano.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: auto;
-    width: auto;
+    height: 90vh;
 }
 
 .key-container {
     display: grid;
     grid-template-columns: 100px 100px 100px;
-    grid-template-rows: repeat(5, 100px);
+    grid-template-rows: repeat(3, 100px);
     grid-gap: 5px;
+    justify-content: center;
     align-content: center;
+    padding: 10px;
 }
 
 #key {
     background: rgb(255, 255, 255, 0.6);
     height: 100px;
     width: 100px;
-    margin: 5px;
-    margin-top: 50px;
     text-align: center;
-    align-content: center;
     font-size: 70px;
     color: #ffffff;
 }
@@ -40,4 +38,6 @@ body {
     font-size: 30px; 
     color: #ffffff;
     background: black;
+    height: 10vh;
+    text-align: center;
 }
