--- a/calculator-js/style.css
+++ b/calculator-js/style.css
@@ -19,7 +19,7 @@ body {
     width: 100%;
     background: #67678f;
     font-size: 4rem;
-    color: #ffffff;
+    color: #1d1d27;
     text-align: center;
     border-radius: 5px;
     padding: 10px;
