--- a/chat-app-react/client/src/components/Login.css
+++ b/chat-app-react/client/src/components/Login.css
@@ -19,7 +19,7 @@ body {
 .login {
     display: flex;
     justify-content: center;
-    text-align: center;   
+    text-align: center;
 }
 
 .form-control {
@@ -39,7 +39,7 @@ body {
 .image-alien {
     margin: 0pt 0pt 0pt 0pt;
     width: 30%;
-    transition: transform 0.8s ease-in; 
+    transition: transform 0.8s ease-in;
 }
 
 .image-alien:hover {
@@ -47,7 +47,7 @@ body {
     transform: rotate(180deg)
 }
 
-.lander > h1 {
+.lander>h1 {
     font-family: 'Atomic Age', cursive;
     background-color: rgb(150, 149, 149, 0.1);
 }
@@ -96,49 +96,85 @@ h1 {
     height: 400px;
     width: 400px;
     background-color: #6c82e4;
-    animation: 
-      pulse 3s ease infinite alternate, 
-      nudge 5s linear infinite alternate;
+    animation:
+        pulse 3s ease infinite alternate,
+        nudge 5s linear infinite alternate;
     border-radius: 100%;
-  }
-  
-  @keyframes pulse {
-    0%, 100% {
-      background-color: #6c82e4;
-    }
-    50% {
-      background-color: rgb(101, 214, 66);
-    }
-  }
-  
-  @keyframes nudge {
-    0%, 100% {
-      transform: translate(0, 0);
-    }
-    
-    50% {
-      transform: translate(150px, 0);
-    }
-    
-    80% {
-      transform: translate(-150px, 0);
-    }
-  }
+}
 
-.lander{
+@keyframes pulse {
+    0%,
+    100% {
+        background-color: #6c82e4;
+    }
+
+    50% {
+        background-color: rgb(101, 214, 66);
+    }
+}
+
+@keyframes nudge {
+
+    0%,
+    100% {
+        transform: translate(0, 0);
+    }
+
+    50% {
+        transform: translate(150px, 0);
+    }
+
+    80% {
+        transform: translate(-150px, 0);
+    }
+}
+
+.lander {
     background-color: rgb(150, 149, 149, 0.1);
 }
 
 /* end home page css */
 
 /* chat page css */
-.chat-box{
+.chat-box {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.sent-messages{
+.chatpage-username {
+    width: 60px;
+    height: 50px;
+    background: #f06d06;
+    border-radius: 75%;
+    animation: move 8s infinite ease-in-out;
+}
+
+@keyframes move {
+    20%,
+    100% {
+        opacity: 0;
+        transform: translate(300px, 0);
+    }
+
+    0% {
+        opacity: 0;
+    }
+
+    10% {
+        opacity: 1;
+    }
+}
+
+.area {
+    width: 350px;
+    height: 50px;
+    margin: 0 auto;
+    border: 2px solid #f06d06;
+    border-radius: 10px;
+}
+
+.sent-messages {
     display: flex;
     flex-direction: column;
     border: 1pt solid black;
@@ -146,7 +182,8 @@ h1 {
     width: 65%;
     height: 40vh;
     overflow: auto;
-    background-color:rgb(153, 153, 153, 0.2);;
+    background-color: rgb(153, 153, 153, 0.1);
+    margin-bottom: 1rem;
 }
 
 .the-form {
@@ -166,9 +203,9 @@ h1 {
     justify-content: space-evenly;
 }
 
-#message{
+#message {
     width: 50vw;
-    margin: 0px 10px 10px 0px;   
+    margin: 0px 10px 10px 0px;
 }
 
 .the-button-container {
@@ -176,21 +213,21 @@ h1 {
     width: 8rem;
 }
 
-.the-button{
+.the-button {
     display: flex;
     justify-content: center;
     align-content: center;
     height: 3rem;
     border-radius: 12px;
     border: 1pt solid black;
-    background-color: rgb(245, 245, 245);
-    color: rgb(89, 89, 89);
+    background-color: #f06d06;
+    color: black;
     font-size: 2rem;
     text-align: center;
     width: 100%;
 }
 
-.the-button:hover{
+.the-button:hover {
     display: flex;
     justify-content: center;
     align-content: center;
@@ -202,32 +239,31 @@ h1 {
     text-align: center;
 }
 
-.chat-interface{
+.chat-interface {
     display: flex;
     flex-direction: row;
 }
 
-.username{
+.username {
     margin: 5pt 7pt 5pt 7pt;
     padding: 3pt 2pt 3pt 0pt;
     font-weight: bold;
     word-wrap: break-word;
 }
 
-.the-message{
+.the-message {
     margin: 5pt 7pt 5pt 7pt;
     padding: 4pt 7pt 3pt 7pt;
     width: 66%;
-    background-color: rgba(255, 187, 241, 0.434);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgb(238, 106, 6, 0.434));
     border-radius: 12px;
     word-wrap: break-word;
 }
 
-.the-message:hover{
+.the-message:hover {
     margin: 5pt 7pt 5pt 7pt;
     padding: 4pt 7pt 3pt 7pt;
-    /* width: 66%; */
-    background-image: linear-gradient(rgba(255, 255, 255, 0.7),rgba(255, 187, 241, 0.9));
+    background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgb(238, 106, 6, 0.9));
     border-radius: 12px;
     word-wrap: break-word;
 }
@@ -237,7 +273,7 @@ h3 {
 }
 
 @media only screen and (min-width: 700px) {
-    .the-message{
+    .the-message {
         margin: 5pt 7pt 5pt 7pt;
         padding: 4pt 7pt 3pt 7pt;
         width: auto;
@@ -246,6 +282,7 @@ h3 {
         word-wrap: break-word;
     }
 }
+
 /* end chat page css */
 
 /* navbar css */
@@ -271,7 +308,9 @@ h3 {
 }
 
 .navbar-buttons:hover {
-    box-shadow: 6px 9px rgb(153, 153, 153, 0.5);;
+    box-shadow: 6px 9px rgb(153, 153, 153, 0.5);
+    ;
     border-radius: 5px;
 }
+
 /* end navbar css */
