--- a/chat-app-react/client/src/components/Login.css
+++ b/chat-app-react/client/src/components/Login.css
@@ -170,7 +170,7 @@ h1 {
     width: 350px;
     height: 50px;
     margin: 0 auto;
-    border: 2px solid #f06d06;
+    border: 0.6pt solid #f06d06;
     border-radius: 10px;
 }
 
